implement user add comments
