# src/router/articleRoutes.ts
@@ -13,9 +13,29 @@ router.post("/create-article",
 )
 
 router.get("/all-articles", articleController.getAllArticles)
-router.get("/article/:id",isArticleExist, articleController.getOneArticle)
-router.put("/update-article/:id",isArticleExist, isArticleOwner, upload.single("imageUrl"), articleController.userUpdateArticle)
-router.delete("/delete-article/:id",isArticleExist, isArticleOwner, articleController.userDeleteArticle)
+router.get("/article/:articleId",
+    isArticleExist, 
+    articleController.getOneArticle
+)
+
+router.put("/update-article/:articleId",
+    userAuthorization,
+    isArticleOwner, 
+    upload.single("imageUrl"), 
+    articleController.userUpdateArticle
+)
+router.delete("/delete-article/:articleId",
+    userAuthorization,
+    isArticleOwner, 
+    articleController.userDeleteArticle
+)
+
+router.post("/article/:articleId/comment",
+    userAuthorization, 
+    isArticleExist, 
+    articleController.userCreateComment 
+)
+
 
 
 export default router
